# rustwin32

./: Cargo.toml  LICENSE  README.md
src/: D3D12CommandQueueFlags.rs  D3D12RootSignatureFlags.rs  DXGISwapChainFlags.rs  DXGIUsage.rs  d3d12.rs  d3d12sdklayers.rs  d3dcommon.rs  d3dx12.rs  declspec.rs  dxgi.rs  dxgi1_2.rs  dxgi1_3.rs  dxgi1_4.rs  dxgi1_5.rs  dxgiformat.rs  dxgitype.rs  kernel32.rs  lib.rs  macros.rs  unknwn.rs  user32.rs  windef.rs
