[package]
name = "win32"
version = "0.0.1"
authors = ["Zvi \"CtrlZvi\" Effron <zeffron@cs.hmc.edu>"]

publish = false

[dependencies]
winapi = "^0"
d3d12-sys = "^0"
dxgi-sys = "^0"
user32-sys = "^0"
# TODO(zeffron 2016-08-15): bitflags is problematic because it creates
# constants instead of values namespaced by an enum. We should find or create a
# replacement
bitflags = "^0"
